--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "owl-js",
+  "name": "@utibeabasi/owl-js",
   "version": "1.0.0",
   "description": "Simple, light weight web framework",
   "main": "index.js",
@@ -10,7 +10,7 @@
     "node": ">=14.0.0"
   },
   "scripts": {
-    "serve": "nodemon index.js",
+    "test:serve": "nodemon tests/api/server.ts",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,7 +23,7 @@
     "express.js",
     "node.js"
   ],
-  "author": "utibeabasi kamounation@gmail.com",
+  "author": "utibeabasi <kamounation@gmail.com",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/kiama-organisation/owl.js/issues"
@@ -31,11 +31,17 @@
   "homepage": "https://github.com/kiama-organisation/owl.js#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "http-status": "^1.5.3"
+    "express-rate-limit": "^6.7.0",
+    "http-status": "^1.5.3",
+    "mongoose": "^6.8.1",
+    "morgan": "^1.10.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.17",
+    "@types/winston": "^2.4.4",
     "eslint": "^8.30.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
