--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@utibeabasi/owl-js",
   "version": "1.0.0",
   "description": "Simple, light weight web framework",
-  "main": "index.js",
+  "main": "index.ts",
   "contributors": [
     "Andry Rasolofomanana <github.com/andryrasolofomanana"
   ],
