--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,5 +42,11 @@
     "exclude": [
         "node_modules",
         "dist"
-    ]
+    ],
+
+    "ts-node": {
+        "compilerOptions":{
+            "module": "commonjs"
+        }
+    }
 }
