--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "engines": {
     "node": ">=14.0.0"
   },
+  "type": "module",
   "scripts": {
     "test:serve": "nodemon tests/api/server.ts",
     "start": "nodemon index.js",
