update: compile source code to javascript to solve error

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,15 +37,14 @@
         "lib/**/*.ts",
         "lib/**/*.json",
         "tests",
-        "index.ts"
+        "src"
     ],
     "exclude": [
         "node_modules",
         "dist"
     ],
-
     "ts-node": {
-        "compilerOptions":{
+        "compilerOptions": {
             "module": "commonjs"
         }
     }
