--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@utibeabasi/owl-js",
-  "version": "1.0.1-test",
+  "version": "1.0.1-test1",
   "description": "Simple, light weight web framework",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "contributors": [
     "Andry Rasolofomanana <https://github.com/andryrasolofomanana",
     "Christopher Egbaaibon <https://github.com/chrisegbaaaibon"
@@ -13,8 +13,10 @@
   "type": "module",
   "scripts": {
     "test:serve": "nodemon tests/api/server.ts",
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "swc src -d dist --source-maps --copy-files",
+    "build:tsc": "tsc ."
   },
   "repository": {
     "type": "git",
@@ -40,6 +42,8 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@swc/cli": "^0.1.59",
+    "@swc/core": "^1.3.24",
     "@types/express": "^4.17.15",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.17",
