--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "scripts": {
     "test:serve": "nodemon tests/api/server.ts",
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
