update: revert file structure to initial

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@utibeabasi/owl-js",
-  "version": "1.0.1-test",
+  "version": "1.0.1-test4",
   "description": "Simple, light weight web framework",
   "main": "index.ts",
   "contributors": [
