revert: app strcuture to original form

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,8 @@
         "lib/**/*.json",
         "src",
         "tests",
-        "src"
+        "src",
+        "index.ts"
     ],
     "exclude": [
         "node_modules",
